# quant-hub

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: universes.json
data/universes/: dividend_growers.txt  fintech_growth.txt  large_cap_growth.txt  mean_reversion_core.txt  mega_runners.txt  mid_cap_growth.txt  sector_commodity_etfs.txt  small_cap_growth.txt  sp500.txt  sp500_index.meta.json  sp500_index.txt
docker/: Dockerfile  crontab  entrypoint.sh  jobs.yaml
docs/: ANALYTICS_GUIDE.md  ARCHITECTURE_GAPS.md  BREAKOUT_SCANNER.md  DATA_MODEL.md  DIGEST_POLICY.md  JUNIOR_DEV_DATABASE_GUIDE.md  LAUNCHPAD_ML_GUIDE.md  LAUNCHPAD_SCANNER.md  LYNCH_SCANNER.md  MEAN_REVERSION_SCANNER.md  ML_FOUNDATION.md  ML_OPS.md  RUNBOOK.md  RUN_TEAM_QUICKSTART.md  SWING_SCANNER.md  USER_MANUAL.md
scripts/: forward_returns_mega_runners.py  full-rescan.sh  launchpad-lynch-rescan.sh  ml-phase-swing-sp500-index.sh  ml-phase-swing-sp500.sh  push-to-github.sh  screen_extreme_movers_5y.py  summarize_mega_runners_backfill.py  weekly-full-coverage  weekly-full-coverage.sh
src/quant_hub/: config.py  indicators.py  logging_setup.py
src/quant_hub/application/: digest_service.py  launchpad_backfill_service.py  lynch_service.py  mean_reversion_scan_core.py  mean_reversion_service.py  ml_cache_service.py  ml_evaluate_service.py  ml_export_service.py  ml_label_service.py  ml_train_service.py  run_result.py  scan_service.py  swing_backfill_service.py  swing_scan_core.py  swing_service.py  universe_refresh.py  universe_service.py
src/quant_hub/cli/: analytics.py  backfill.py  daily.py  digest.py  launchpad.py  launchpad_all.py  launchpad_daily.py  lynch.py  lynch_all.py  mean_reversion.py  ml.py  scan.py  scan_all.py  status.py  swing.py  swing_all.py  universe.py  view.py
src/quant_hub/dashboard/: app.py
src/quant_hub/data/: fundamentals_helpers.py  news.py  provenance.py  quality.py  sector.py  spy_holdings.py  tickers.py  universe.py
src/quant_hub/digest/: __init__.py  analytics.py  command_center.py  humanize.py  policy.py
src/quant_hub/ml/: labels.py  (+8 more)
tests/unit/: mean_reversion_helpers.py  test_breakout_no_fundamentals.py  test_breakout_rubric.py  test_cli_defaults.py  test_cli_ticker.py  test_dashboard_digest.py  test_dashboard_ticker_history.py  test_dashboard_ux.py  test_digest.py  test_etf_eligibility.py  test_fundamentals_cache.py  test_fundamentals_compute.py  test_fundamentals_scoring.py  test_json_util.py  test_launchpad_rubric.py  test_launchpad_scan_service.py  test_lynch.py  test_lynch_service.py  test_mean_reversion_scanner.py  test_mean_reversion_scoring.py  test_mean_reversion_trade_plan.py  test_ml_backfill_dates.py  test_ml_features.py  test_ml_labels.py  test_parquet_cache.py  test_primary_universe.py  test_quality.py  test_regression_fixes.py  test_repository.py  test_scan_service.py  test_score_guide.py  test_signals.py  test_spy_holdings.py  test_swing_atr_pullback.py  test_swing_backfill.py  test_swing_metrics.py  test_swing_scanner.py  test_swing_scoring.py  test_ticker_actionable.py  test_ticker_projection.py  (+5 more)
(+113 files in other folders)
