[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-hub"
version = "0.1.0"
description = "Homelab quant scanner with Postgres-backed results"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "plotly>=5.0.0",
    "psycopg[binary]>=3.2.0",
    "pyarrow>=18.0.0",
    "streamlit>=1.40.0",
    "yfinance>=0.2.40",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
viz = [
    "plotly>=5.0.0",
    "streamlit>=1.40.0",
]
ml = [
    "scikit-learn>=1.5.0",
    "lightgbm>=4.0.0",
]

[project.scripts]
quant-scan = "quant_hub.cli.scan:main"
quant-scan-all = "quant_hub.cli.scan_all:main"
quant-swing-all = "quant_hub.cli.swing_all:main"
quant-lynch-all = "quant_hub.cli.lynch_all:main"
quant-daily = "quant_hub.cli.daily:main"
quant-swing = "quant_hub.cli.swing:main"
quant-mean-reversion = "quant_hub.cli.mean_reversion:main"
quant-lynch = "quant_hub.cli.lynch:main"
quant-digest = "quant_hub.cli.digest:main"
quant-analytics = "quant_hub.cli.analytics:main"
quant-universe = "quant_hub.cli.universe:main"
quant-hub = "quant_hub.cli.status:main"
quant-ml = "quant_hub.cli.ml:main"
quant-backfill = "quant_hub.cli.backfill:main"
quant-view = "quant_hub.cli.view:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_hub"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require network access",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/quant_hub/notify/email.py" = ["E501"]
"src/quant_hub/notify/*.py" = ["E501"]
